# taitsu

./: .gitignore  Cargo.toml  README.md
src/: app.rs  gui.rs  main.rs  state.rs  utils.rs
src/panels/: accounts.rs  channels.rs  chat.rs  mod.rs  popups.rs  settings.rs  users.rs
