[package]
name = "taitsu"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
dirs = "5.0.1"
eframe = "0.29.1"
egui = { version = "0.29.1", features = ["color-hex"] }
egui_extras = { version = "0.29.1", features = [
    "all_loaders",
    "default",
    "file",
    "http",
    "image",
    "svg",
] }

image = { version = "0.25.6", features = ["default-formats", "nasm"] }
oshatori = { version = "0.2.0", features = [
    "sockchat",
    "mock",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full", "sync"] }
uuid = { version = "1.11.0", features = ["v4"] }
